--- a/index.Rmd
+++ b/index.Rmd
@@ -17,7 +17,7 @@ library(fastDummies)
 library(gtsummary)
 ```
 
-```{r, echo=FALSE}
+```{r, echo=FALSE, message=FALSE, warning=FALSE}
 library(kableExtra)
 ```
 
